// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`nekomoekissaten > 【喵萌Production】★10月新番★[LoveLive! 超級明星!! 3期 / Love Live! Superstar!! S3][07][1080p][繁日雙語][招募翻譯] 1`] = `
{
  "episode": {
    "number": 7,
  },
  "fansub": {
    "name": "喵萌Production",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "繁日雙語",
  "month": 10,
  "season": {
    "number": 3,
  },
  "tags": [],
  "title": "LoveLive! 超級明星!!",
  "titles": [
    "Love Live! Superstar!!",
  ],
}
`;

exports[`nekomoekissaten > 【喵萌奶茶屋】★07月新番★[亚托莉 我挚爱的时光 / ATRI - My Dear Moments][01-13][1080p][简日双语][招募翻译时轴] 1`] = `
{
  "episodeRange": {
    "from": 1,
    "to": 13,
  },
  "fansub": {
    "name": "喵萌奶茶屋",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简日双语",
  "month": 7,
  "tags": [],
  "title": "亚托莉 我挚爱的时光",
  "titles": [
    "ATRI - My Dear Moments",
  ],
}
`;

exports[`nekomoekissaten > 【喵萌奶茶屋】★07月新番★[亞托莉 我摯愛的時光 / ATRI - My Dear Moments][01-13][1080p][繁日雙語][招募翻譯時軸] 1`] = `
{
  "episodeRange": {
    "from": 1,
    "to": 13,
  },
  "fansub": {
    "name": "喵萌奶茶屋",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "繁日雙語",
  "month": 7,
  "tags": [],
  "title": "亞托莉 我摯愛的時光",
  "titles": [
    "ATRI - My Dear Moments",
  ],
}
`;

exports[`nekomoekissaten > 【喵萌奶茶屋】★07月新番★[神之塔 二期 / Tower of God S2][20][1080p][简体][招募翻译] 1`] = `
{
  "episode": {
    "number": 20,
  },
  "fansub": {
    "name": "喵萌奶茶屋",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简体",
  "month": 7,
  "season": {
    "number": 2,
  },
  "tags": [],
  "title": "神之塔",
  "titles": [
    "Tower of God",
  ],
}
`;

exports[`nekomoekissaten > 【喵萌奶茶屋】★07月新番★[神之塔 二期 / Tower of God S2][20][1080p][繁體][招募翻譯] 1`] = `
{
  "episode": {
    "number": 20,
  },
  "fansub": {
    "name": "喵萌奶茶屋",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "繁體",
  "month": 7,
  "season": {
    "number": 2,
  },
  "tags": [],
  "title": "神之塔",
  "titles": [
    "Tower of God",
  ],
}
`;

exports[`nekomoekissaten > 【喵萌奶茶屋】★07月新番★[神之塔 二期 / Tower of God S2][21][1080p][简体][招募翻译] 1`] = `
{
  "episode": {
    "number": 21,
  },
  "fansub": {
    "name": "喵萌奶茶屋",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简体",
  "month": 7,
  "season": {
    "number": 2,
  },
  "tags": [],
  "title": "神之塔",
  "titles": [
    "Tower of God",
  ],
}
`;

exports[`nekomoekissaten > 【喵萌奶茶屋】★07月新番★[神之塔 二期 / Tower of God S2][21][1080p][繁體][招募翻譯] 1`] = `
{
  "episode": {
    "number": 21,
  },
  "fansub": {
    "name": "喵萌奶茶屋",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "繁體",
  "month": 7,
  "season": {
    "number": 2,
  },
  "tags": [],
  "title": "神之塔",
  "titles": [
    "Tower of God",
  ],
}
`;

exports[`nekomoekissaten > 【喵萌奶茶屋】★07月新番★[神之塔 二期 / Tower of God S2][22][1080p][简体][招募翻译] 1`] = `
{
  "episode": {
    "number": 22,
  },
  "fansub": {
    "name": "喵萌奶茶屋",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简体",
  "month": 7,
  "season": {
    "number": 2,
  },
  "tags": [],
  "title": "神之塔",
  "titles": [
    "Tower of God",
  ],
}
`;

exports[`nekomoekissaten > 【喵萌奶茶屋】★07月新番★[神之塔 二期 / Tower of God S2][22][1080p][繁體][招募翻譯] 1`] = `
{
  "episode": {
    "number": 22,
  },
  "fansub": {
    "name": "喵萌奶茶屋",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "繁體",
  "month": 7,
  "season": {
    "number": 2,
  },
  "tags": [],
  "title": "神之塔",
  "titles": [
    "Tower of God",
  ],
}
`;

exports[`nekomoekissaten > 【喵萌奶茶屋】★10月新番★[Chi。-关于地球的运动- / Chi. Chikyuu no Undou ni Tsuite][11][1080p][简日双语][招募翻译] 1`] = `
{
  "episode": {
    "number": 11,
  },
  "fansub": {
    "name": "喵萌奶茶屋",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简日双语",
  "month": 10,
  "tags": [],
  "title": "Chi。-关于地球的运动-",
  "titles": [
    "Chi. Chikyuu no Undou ni Tsuite",
  ],
}
`;

exports[`nekomoekissaten > 【喵萌奶茶屋】★10月新番★[乱马 1/2 2024年版 / Ranma ½ / Ranma 1/2 (2024)][10][1080p][简日双语][招募翻译] 1`] = `
{
  "episode": {
    "number": 10,
  },
  "fansub": {
    "name": "喵萌奶茶屋",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简日双语",
  "month": 10,
  "tags": [],
  "title": "乱马 1/2 2024年版",
  "titles": [
    "Ranma ½",
    "Ranma 1/2(2024)]",
  ],
}
`;

exports[`nekomoekissaten > 【喵萌奶茶屋】★10月新番★[乱马 1/2 2024年版 / Ranma ½ / Ranma 1/2 (2024)][11][1080p][简日双语][招募翻译] 1`] = `
{
  "episode": {
    "number": 11,
  },
  "fansub": {
    "name": "喵萌奶茶屋",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简日双语",
  "month": 10,
  "tags": [],
  "title": "乱马 1/2 2024年版",
  "titles": [
    "Ranma ½",
    "Ranma 1/2(2024)]",
  ],
}
`;

exports[`nekomoekissaten > 【喵萌奶茶屋】★10月新番★[亂馬 1/2 2024年版 / Ranma ½ / Ranma 1/2 (2024)][10][1080p][繁日雙語][招募翻譯] 1`] = `
{
  "episode": {
    "number": 10,
  },
  "fansub": {
    "name": "喵萌奶茶屋",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "繁日雙語",
  "month": 10,
  "tags": [],
  "title": "亂馬 1/2 2024年版",
  "titles": [
    "Ranma ½",
    "Ranma 1/2(2024)]",
  ],
}
`;

exports[`nekomoekissaten > 【喵萌奶茶屋】★10月新番★[亂馬 1/2 2024年版 / Ranma ½ / Ranma 1/2 (2024)][11][1080p][繁日雙語][招募翻譯] 1`] = `
{
  "episode": {
    "number": 11,
  },
  "fansub": {
    "name": "喵萌奶茶屋",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "繁日雙語",
  "month": 10,
  "tags": [],
  "title": "亂馬 1/2 2024年版",
  "titles": [
    "Ranma ½",
    "Ranma 1/2(2024)]",
  ],
}
`;

exports[`nekomoekissaten > 【喵萌奶茶屋】★10月新番★[冻牌 / Touhai: Ura Rate Mahjong Touhai Roku][10][1080p][简体][招募翻译] 1`] = `
{
  "episode": {
    "number": 10,
  },
  "fansub": {
    "name": "喵萌奶茶屋",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简体",
  "month": 10,
  "tags": [],
  "title": "冻牌",
  "titles": [
    "Touhai: Ura Rate Mahjong Touhai Roku",
  ],
}
`;

exports[`nekomoekissaten > 【喵萌奶茶屋】★10月新番★[凍牌 / Touhai: Ura Rate Mahjong Touhai Roku][10][1080p][繁體][招募翻譯] 1`] = `
{
  "episode": {
    "number": 10,
  },
  "fansub": {
    "name": "喵萌奶茶屋",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "繁體",
  "month": 10,
  "tags": [],
  "title": "凍牌",
  "titles": [
    "Touhai: Ura Rate Mahjong Touhai Roku",
  ],
}
`;

exports[`nekomoekissaten > 【喵萌奶茶屋】★10月新番★[妻子变成小学生。 / Tsuma, Shougakusei ni Naru][09][1080p][简日双语][招募翻译时轴] 1`] = `
{
  "episode": {
    "number": 9,
  },
  "fansub": {
    "name": "喵萌奶茶屋",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简日双语",
  "month": 10,
  "tags": [],
  "title": "妻子变成小学生。",
  "titles": [
    "Tsuma, Shougakusei ni Naru",
  ],
}
`;

exports[`nekomoekissaten > 【喵萌奶茶屋】★10月新番★[妻子變成小學生。 / Tsuma, Shougakusei ni Naru][09][1080p][繁日雙語][招募翻譯時軸] 1`] = `
{
  "episode": {
    "number": 9,
  },
  "fansub": {
    "name": "喵萌奶茶屋",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "繁日雙語",
  "month": 10,
  "tags": [],
  "title": "妻子變成小學生。",
  "titles": [
    "Tsuma, Shougakusei ni Naru",
  ],
}
`;

exports[`nekomoekissaten > 【喵萌奶茶屋】★10月新番★[神选 / KamiErabi / GOD.app][23][1080p][简日双语][招募翻译] 1`] = `
{
  "episode": {
    "number": 23,
  },
  "fansub": {
    "name": "喵萌奶茶屋",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简日双语",
  "month": 10,
  "tags": [],
  "title": "神选",
  "titles": [
    "KamiErabi",
    "GOD.app",
  ],
}
`;

exports[`nekomoekissaten > 【喵萌奶茶屋】★10月新番★[神選 / KamiErabi / GOD.app][23][1080p][繁日雙語][招募翻譯] 1`] = `
{
  "episode": {
    "number": 23,
  },
  "fansub": {
    "name": "喵萌奶茶屋",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "繁日雙語",
  "month": 10,
  "tags": [],
  "title": "神選",
  "titles": [
    "KamiErabi",
    "GOD.app",
  ],
}
`;

exports[`nekomoekissaten > 【喵萌奶茶屋】★10月新番★[超自然武装当哒当 / 胆大党 / Dandadan][11][1080p][简日双语][招募翻译] 1`] = `
{
  "episode": {
    "number": 11,
  },
  "fansub": {
    "name": "喵萌奶茶屋",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简日双语",
  "month": 10,
  "tags": [],
  "title": "超自然武装当哒当",
  "titles": [
    "胆大党",
    "Dandadan",
  ],
}
`;

exports[`nekomoekissaten > 【喵萌奶茶屋】★10月新番★[超自然武裝噹噠噹 / 膽大黨 / Dandadan][11][1080p][繁日雙語][招募翻譯] 1`] = `
{
  "episode": {
    "number": 11,
  },
  "fansub": {
    "name": "喵萌奶茶屋",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "繁日雙語",
  "month": 10,
  "tags": [],
  "title": "超自然武裝噹噠噹",
  "titles": [
    "膽大黨",
    "Dandadan",
  ],
}
`;

exports[`nekomoekissaten > 【喵萌奶茶屋】★10月新番★[青箱 / Ao no Hako / Blue Box][11][1080p][繁日雙語][招募翻譯] 1`] = `
{
  "episode": {
    "number": 11,
  },
  "fansub": {
    "name": "喵萌奶茶屋",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "繁日雙語",
  "month": 10,
  "tags": [],
  "title": "青箱",
  "titles": [
    "Ao no Hako",
    "Blue Box",
  ],
}
`;

exports[`nekomoekissaten > 【喵萌奶茶屋】★10月新番★[青箱 / Ao no Hako / Blue Box][12][1080p][简日双语][招募翻译] 1`] = `
{
  "episode": {
    "number": 12,
  },
  "fansub": {
    "name": "喵萌奶茶屋",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简日双语",
  "month": 10,
  "tags": [],
  "title": "青箱",
  "titles": [
    "Ao no Hako",
    "Blue Box",
  ],
}
`;

exports[`nekomoekissaten > 【喵萌奶茶屋】★10月新番★[青箱 / Ao no Hako / Blue Box][12][1080p][繁日雙語][招募翻譯] 1`] = `
{
  "episode": {
    "number": 12,
  },
  "fansub": {
    "name": "喵萌奶茶屋",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "繁日雙語",
  "month": 10,
  "tags": [],
  "title": "青箱",
  "titles": [
    "Ao no Hako",
    "Blue Box",
  ],
}
`;

exports[`nekomoekissaten > 【喵萌奶茶屋】★剧场版★[欢迎来到驹田蒸馏所 / 駒田蒸留所へようこそ / Komada Jouryuujo e Youkoso][BDRip][1080p][简日双语][招募翻译时轴] 1`] = `
{
  "fansub": {
    "name": "喵萌奶茶屋",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "简日双语",
  "source": "BDRip",
  "tags": [],
  "title": "欢迎来到驹田蒸馏所",
  "titles": [
    "駒田蒸留所へようこそ",
    "Komada Jouryuujo e Youkoso",
  ],
  "type": "剧场版",
}
`;

exports[`nekomoekissaten > 【喵萌奶茶屋】★劇場版★[歡迎來到駒田蒸餾所 / 駒田蒸留所へようこそ / Komada Jouryuujo e Youkoso][BDRip][1080p][繁日雙語][招募翻譯時軸] 1`] = `
{
  "fansub": {
    "name": "喵萌奶茶屋",
  },
  "file": {
    "video": {
      "resolution": "1080p",
    },
  },
  "language": "繁日雙語",
  "source": "BDRip",
  "tags": [],
  "title": "歡迎來到駒田蒸餾所",
  "titles": [
    "駒田蒸留所へようこそ",
    "Komada Jouryuujo e Youkoso",
  ],
  "type": "劇場版",
}
`;
